--- a/src/components/page/HomePage/ContentPets/contentPets.css
+++ b/src/components/page/HomePage/ContentPets/contentPets.css
@@ -1,25 +1,24 @@
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
 
 .card {
   transition: 0.3s ease-in-out;
   border-radius: 5px;
-
 }
 .card:hover {
   box-shadow: 4px 4px 21px 4px rgba(87, 90, 92, 0.25);
   transform: scale(1.02);
 }
-.card-img{
+.card-img {
   border-radius: 5px;
   display: block;
   width: 100%;
 }
- 
-.container {
+
+/* .container {
   margin-top: 30px;
-}
+} */
 
 .card-title {
   position: absolute;
